--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,11 +19,11 @@
 
   img {
     width: 100px;
-    height: 40px;
+    height: 45px;
 
     @media screen and (min-width: 2000px) {
-      width: 200px;
-      height: 64px;
+      width: 180px;
+      height: 60px;
     }
   }
 }
@@ -38,7 +38,6 @@
   li {
     margin: 0 1rem;
     cursor: pointer;
-
     flex-direction: column;
 
     div {
@@ -54,11 +53,16 @@
       text-decoration: none;
       flex-direction: column;
       text-transform: uppercase;
+      font-size: large;
       font-weight: 500;
       transition: all 0.3s ease-in-out;
 
       &:hover {
         color: var(--secondary-color);
+      }
+
+      @media screen and (min-width: 2000px) {
+        font-size: x-large;
       }
     }
 
@@ -88,6 +92,10 @@
     width: 70%;
     height: 70%;
     color: var(--white-color);
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   div {
@@ -116,6 +124,10 @@
       height: 35px;
       color: var(--secondary-color);
       margin: 0.5rem 1rem;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     ul {
@@ -153,6 +165,64 @@
   }
 
   @media screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+.app__navbar-social {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  p {
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: var(--gray-color);
+    line-height: 1.5;
+    font-weight: 500;
+  }
+
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    li {
+      margin: 0 0.45rem;
+      list-style: none;
+      border: 1px solid var(--lightGray-color);
+      border-radius: 50%;
+      background-color: var(--white-color);
+      box-shadow: 0px 10px 15px 0px hsla(0, 0%, 0%, 0.20);
+
+      svg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 15px;
+        width: 15px;
+        margin: 0.5rem;
+        color: var(--secondary-color);
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: var(--secondary-color);
+        border-color: var(--secondary-color);
+
+        svg {
+          color: var(--white-color);
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: 600px) {
     display: none;
   }
 }
